--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,17 @@
-ltsp-binaries (20.04-1) unstable; urgency=low
+ltsp-binaries (21.01-1) unstable; urgency=medium
 
-  * Release 20.04-1
+  * Version 21.01
+
+ -- Alkis Georgopoulos <alkisg@gmail.com>  Sun, 03 Jan 2021 09:07:00 +0200
+
+ltsp-binaries (20.04-1) unstable; urgency=medium
+
+  * Version 20.04
 
  -- Alkis Georgopoulos <alkisg@gmail.com>  Thu, 30 Apr 2020 08:19:42 +0300
 
-ltsp-binaries (19.11-1) unstable; urgency=low
+ltsp-binaries (19.11-1) unstable; urgency=medium
 
-  * Release 19.11-1
+  * Version 19.11
 
  -- Alkis Georgopoulos <alkisg@gmail.com>  Mon, 11 Nov 2019 08:33:18 +0200
